[project]
name = "intro-object-oriented-design"
version = "0.1.0"
description = ""
authors = [
    {name = "guilherme.gouw",email = "guilherme.gouw@bee2pay.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"
freezegun = "^1.5.5"

